--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     # 编码集
     default-encoding: UTF-8
     #发送邮件的账户
-    username: songxh_1125rx@163.com
+    username: ****************
     #授权码
-    password: TQMAMVQXETVNQKLH
+    password: **********
     test-connection: true
     properties:
       mail:
@@ -22,9 +22,9 @@ spring:
   # DataSource Config
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/sxh
-    username: root
-    password: root
+    url: **********
+    username: ********
+    password: ********
   session:
     timeout: 86400
 server:
